# greview

./: .gitignore  Cargo.toml  README.md  build_static.sh  test_all.sh
src/: main.rs
src/data/: mod.rs
src/greview/: mod.rs  review.rs  review_actor.rs  user.rs  user_actor.rs  user_service.rs
src/http/: mod.rs  review.rs  test_review_api.rs  user.rs  utils.rs
src/storage/: host.rs  mod.rs  review.rs  store.rs  user.rs
static/: asset-manifest.json  index.html  review.html
static/js/: 496.f3482376.chunk.js.map  main.fefeb65b.js.map
static/static/js/: 496.f3482376.chunk.js  main.fefeb65b.js
tests/: README.md  bun.lockb  index.ts  package-lock.json  package.json  review_test.ts  user_test.ts  utils.ts
web/review/: .gitignore  bun.lockb  dev.tsx  package.json  tsconfig.json
web/review/src/: Guest.tsx  Profile.tsx  index.tsx
