[package]
name = "greview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-static-files = "4.0"
static-files = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.19"

[build-dependencies]
static-files = "0.2.1"
