[package]
name = "greview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = " 0.13.0"
actix-web = "4"
actix-http = "3.3"
actix-web-static-files = "4.0"
anyhow = "1.0.72"
env_logger = "0.9.0"
actix-service = "2"
log = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
static-files = "0.2.1"
tracing = "0.1.37"

[build-dependencies]
static-files = "0.2.1"
